<resources>
    <string name="app_name">Group24_InClass13</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="newUser">New User?</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="retypePass">Retype Password</string>
    <string name="signUp">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="menuTitle">Menu Title</string>
    <string name="to">To :</string>
    <string name="send">Send</string>
</resources>
