<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sanyo.group24_inclass13.NewUserActivity">

    <EditText
        android:id="@+id/editTextFName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/fName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextFName"
        android:layout_below="@+id/editTextFName"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/lName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextLName"
        android:layout_below="@+id/editTextLName"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextPass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextPass"
        android:layout_below="@+id/editTextPass"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/retypePass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="52dp"
        android:layout_marginStart="62dp"
        android:text="@string/signUp" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonSignUp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="72dp"
        android:text="@string/cancel" />
</RelativeLayout>
